--- a/pathfinder-visualizer/src/PathFinderVisualizer/PathFinderVisualizer.css
+++ b/pathfinder-visualizer/src/PathFinderVisualizer/PathFinderVisualizer.css
@@ -1,7 +1,3 @@
-.grid {
-    margin: 100px 0 0;
-}
-
 .node-shortest-path {
     background-color: rgb(218, 129, 13);
 }
@@ -16,4 +12,40 @@
 
 .node-start {
     background-color: green;
+}
+
+button{
+   background-color: rgb(147 89 89);
+   margin: 30px; 
+   width: 150px; 
+   height: 50px;
+   text-align: center;
+   display: inline-block;
+   border: none;
+   text-decoration: none;
+   color: white;
+}
+
+button:hover{
+    background-color: rgb(79, 49, 49);
+}
+
+.controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid{
+    display: grid;
+	place-items: center;
+    margin: 100px 0 0;
+}
+
+body{
+    background-color: rgb(197, 197, 197); 
+}
+
+.node-wall{
+    background-color: aquamarine;
 }
