--- a/pathfinder-visualizer/src/PathFinderVisualizer/Node/Node.css
+++ b/pathfinder-visualizer/src/PathFinderVisualizer/Node/Node.css
@@ -1,7 +1,7 @@
 .node {
-    width: 20px;
-    height: 20px;
-    outline: 0.5px solid rgba(74, 68, 61, 0.64);;
+    width: 2%; /* 2% of the viewport width */
+    height: 100%; /* 2% of the viewport width */
+    outline: 1px solid rgba(74, 68, 61, 0.64); /* 0.1% of the viewport width */
     display: inline-block;
 }
 
