--- a/pathfinder-visualizer/src/PathFinderVisualizer/PathFinderVisualizer.css
+++ b/pathfinder-visualizer/src/PathFinderVisualizer/PathFinderVisualizer.css
@@ -1,51 +1,48 @@
-.node-shortest-path {
-    background-color: rgb(218, 129, 13);
-}
-
 .node-visited {
     background-color: blue;
 }
 
-.node-finish {
-    background-color: red;
+.node-shortest-path {
+    background-color: rgb(218, 129, 13);
 }
 
-.node-start {
-    background-color: green;
+button {
+    background-color: rgb(147, 89, 89);
+    text-align: center;
+    display: inline-block;
+    border: none;
+    text-decoration: none;
+    color: white;
+    padding: 16px 8px;
 }
 
-button{
-   background-color: rgb(147 89 89);
-   margin: 30px; 
-   width: 130px; 
-   height: 50px;
-   text-align: center;
-   display: inline-block;
-   border: none;
-   text-decoration: none;
-   color: white;
-}
-
-button:hover{
+button:hover {
     background-color: rgb(79, 49, 49);
 }
 
-.controls{
+.controls {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 24px;
 }
 
-.grid{
-    display: grid;
-	place-items: center;
-    margin: 70px 0 0;
+.grid {
+    place-items: center;
+    margin:8vh 10vw;/* Adjust margin for responsiveness */
+    aspect-ratio: 50 / 20;
+}
+.grid > div {
+    height: 5%;
+    width: 100%;
 }
 
-body{
-    background-color: rgb(197, 197, 197); 
+body {
+    background-color: rgb(197, 197, 197);
 }
 
-.node-wall{
+.node-wall {
     background-color: aquamarine;
 }
+
