--- a/pathfinder-visualizer/src/PathFinderVisualizer/PathFinderVisualizer.css
+++ b/pathfinder-visualizer/src/PathFinderVisualizer/PathFinderVisualizer.css
@@ -46,3 +46,8 @@ body {
     background-color: aquamarine;
 }
 
+.error{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
